--- a/Index.html
+++ b/Index.html
@@ -152,7 +152,7 @@
         <center>
         <div class="section-content">
             <h2>Resume</h2>
-            <a href="mangalam.pdf" class="download-button">Download CV</a>
+            <a href="IMG_20231031_131805.jpg" class="download-button">Download CV</a>
         </div>
         </center>
     </section>
